--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -45,7 +45,7 @@
 		<item>sleep</item>
 	</string-array>
 
-    <string-array name="remap_actions_on_names">
+    <string-array name="remap_actions_names">
 		<item>Default</item>
 		<item>Disabled</item>
 		<item>Power</item>
@@ -79,7 +79,7 @@
 		<item>Android Intent&#8230;</item>
 	</string-array>
 	
-    <string-array name="remap_actions_on_values">
+    <string-array name="remap_actions_values">
 		<item>default</item>
 		<item>disabled</item>
 		<item>26</item>
@@ -108,38 +108,6 @@
 		<item>168</item>
 		<item>169</item>
 		<item>killapp</item>
-		<item>application</item>
-		<item>keycode</item>
-		<item>intent</item>
-	</string-array>
-
-    <string-array name="remap_actions_off_names">
-        <item>Default</item>
-		<item>Disabled</item>
-		<item>Power</item>
-		<item>Power Forced</item>
-		<item>Camera</item>
-		<item>Volume Up</item>
-		<item>Volume Down</item>
-		<item>Media Play/Pause</item>
-		<item>Media Previous</item>
-		<item>Media Next</item>
-		<item>Application&#8230;</item>
-		<item>Key Code&#8230;</item>
-		<item>Android Intent&#8230;</item>
-	</string-array>
-	
-    <string-array name="remap_actions_off_values">
-        <item>default</item>
-		<item>disabled</item>
-		<item>26</item>
-		<item>poweron</item>
-		<item>27</item>
-		<item>24</item>
-		<item>25</item>
-		<item>85</item>
-		<item>88</item>
-		<item>87</item>
 		<item>application</item>
 		<item>keycode</item>
 		<item>intent</item>
