--- a/res/xml/activity_screen_remap_condition.xml
+++ b/res/xml/activity_screen_remap_condition.xml
@@ -5,9 +5,19 @@
         android:key="actions_group"
         android:title="@string/category_button_states">
         
+         <com.spazedog.xposed.additionsgb.tools.views.WidgetPreference
+            android:key="state_press_preference"
+            android:title="@string/preference_state_press"
+            android:widgetLayout="@layout/widget_checkbox" />
+         
         <com.spazedog.xposed.additionsgb.tools.views.WidgetPreference
             android:key="state_click_preference"
             android:title="@string/preference_state_click"
+            android:widgetLayout="@layout/widget_checkbox" />
+
+        <com.spazedog.xposed.additionsgb.tools.views.WidgetPreference
+            android:key="state_press2_preference"
+            android:title="@string/preference_state_press2"
             android:widgetLayout="@layout/widget_checkbox" />
         
         <com.spazedog.xposed.additionsgb.tools.views.WidgetPreference
@@ -16,8 +26,13 @@
             android:widgetLayout="@layout/widget_checkbox" />
         
         <com.spazedog.xposed.additionsgb.tools.views.WidgetPreference
-            android:key="state_press_preference"
-            android:title="@string/preference_state_press"
+            android:key="state_press3_preference"
+            android:title="@string/preference_state_press3"
+            android:widgetLayout="@layout/widget_checkbox" />
+        
+        <com.spazedog.xposed.additionsgb.tools.views.WidgetPreference
+            android:key="state_tap3_preference"
+            android:title="@string/preference_state_tap3"
             android:widgetLayout="@layout/widget_checkbox" />
         
     </PreferenceCategory>
