--- a/res/layout/widget_checkbox.xml
+++ b/res/layout/widget_checkbox.xml
@@ -15,7 +15,7 @@
 		android:background="?android:attr/listDivider" />
     
 	<CheckBox
-	    android:id="@+android:id/checkbox" 
+	    android:id="@android:id/checkbox" 
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
