--- a/res/xml/activity_screen_remap_main.xml
+++ b/res/xml/activity_screen_remap_main.xml
@@ -20,13 +20,19 @@
             android:max="600"
             robobunny:min="100"
             robobunny:unitsRight="ms" />
-        
+
+        <CheckBoxPreference
+            android:key="skip_unconfigured_primary_key_preference"
+            android:title="@string/preference_title_skip_unconfigured_primary_key"
+            android:summary="@string/preference_summary_skip_unconfigured_primary_key"
+            android:persistent="false" />
+
         <CheckBoxPreference
             android:key="allow_externals_preference"
             android:title="@string/preference_title_allow_externals"
             android:summary="@string/preference_summary_allow_externals"
             android:persistent="false" />
-        
+
     </PreferenceCategory>
     
     <PreferenceCategory
