--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -29,5 +29,11 @@
 		<item>controller</item>
 		<item>misc</item>
 	</string-array>
-    
+
+    <string-array name="default_condition_values">
+        <item>on</item>
+        <item>guard</item>
+        <item>off</item>
+    </string-array>
+
 </resources>
