--- a/res/xml/activity_screen_remap_condition.xml
+++ b/res/xml/activity_screen_remap_condition.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-    
+
+    <CheckBoxPreference
+        android:key="default_condition_preference"
+        android:title="@string/preference_title_default_condition"
+        android:summary="@string/preference_summary_default_condition"
+        android:persistent="false" />
+
     <PreferenceCategory
         android:key="actions_single_group"
         android:title="@string/category_button_single_states">
