Lollipop prepare:  * separate initZygnote and handleLoadPackage, no behavior change
Removal of Lint warnings:
 * Added explanations for supression of API21 warnings: getRecentTasks, com.android.camera (getRecentTasks are not completely solved)
 * xml warning for RTL etc
 * Use plurals instead of getQuantityResource() and loosely related strings.xml
 * chain append instead of adding strings
 * API check for launching app shortcuts, may have crashed for Gingerbread due to a flag
 * Removed unused imports, fields
 * Commented out unused methods
 * for -> foreach conversions
 * some unnecessary semicolons

--- a/res/layout-v11/dialog_intercept_key.xml
+++ b/res/layout-v11/dialog_intercept_key.xml
@@ -32,7 +32,8 @@
 	                android:id="@+id/content_value"
 		            android:layout_width="wrap_content"
 		    		android:layout_height="wrap_content"
-	    			android:paddingRight="10dp" />
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp" />
             </LinearLayout>
             <TextView 
                 android:id="@+id/content_text"
@@ -45,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="?android:attr/buttonBarStyle"
-        android:gravity="right"
+        android:gravity="end"
         android:orientation="horizontal" >
         <Button
             android:id="@+id/button_cancel"
