--- a/res/layout/error_log_view.xml
+++ b/res/layout/error_log_view.xml
@@ -8,14 +8,14 @@
     
 	<HorizontalScrollView
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
+	    android:layout_height="wrap_content"
 	    android:fillViewport="true"
 	    android:fastScrollEnabled="true"
         android:textFilterEnabled="false" >
 
 	    <TextView
 	        android:id="@+id/content"
-	        android:layout_width="match_parent"
+	        android:layout_width="wrap_content"
 	        android:layout_height="match_parent"
 	        android:orientation="vertical"
 	        android:padding="10dp" />
