--- a/res/layout/widget_checkbox.xml
+++ b/res/layout/widget_checkbox.xml
@@ -9,8 +9,9 @@
 	<View android:id="@+id/Separator"
 		android:layout_width="1dp"
 		android:layout_height="match_parent"
-		android:layout_marginRight="?android:attr/scrollbarSize"
-		android:layout_marginTop="?android:attr/scrollbarSize"
+        android:layout_marginRight="?android:attr/scrollbarSize"
+        android:layout_marginEnd="?android:attr/scrollbarSize"
+        android:layout_marginTop="?android:attr/scrollbarSize"
 		android:layout_marginBottom="?android:attr/scrollbarSize"
 		android:background="?android:attr/listDivider" />
     
