--- a/res/layout/widget_delete.xml
+++ b/res/layout/widget_delete.xml
@@ -10,6 +10,7 @@
 		android:layout_width="1dp"
 		android:layout_height="match_parent"
 		android:layout_marginRight="?android:attr/scrollbarSize"
+        android:layout_marginEnd="?android:attr/scrollbarSize"
 		android:layout_marginTop="?android:attr/scrollbarSize"
 		android:layout_marginBottom="?android:attr/scrollbarSize"
 		android:background="?android:attr/listDivider" />
