readd actionbar color override

--- a/res/layout/actionbar_v14_layout.xml
+++ b/res/layout/actionbar_v14_layout.xml
@@ -8,4 +8,5 @@
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
     app:navigationContentDescription="@string/abc_action_bar_up_description"
+    android:background="?attr/colorPrimary"
     />
